@@ -1,7 +1,9 @@
 package com.example.internships.service;
 
 import com.example.internships.dao.entity.User;
+import com.example.internships.dao.repository.UserRepository;
 import io.jsonwebtoken.Claims;
+import io.jsonwebtoken.JwtException;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.SignatureAlgorithm;
 import io.jsonwebtoken.io.Decoders;
@@ -9,69 +11,108 @@ import io.jsonwebtoken.security.Keys;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 
 import java.security.Key;
-import java.util.*;
+import java.util.Date;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 @Service
 public class JwtServiceImpl implements JwtService {
+
     private static final Logger logger = LoggerFactory.getLogger(JwtServiceImpl.class);
+    private static final String ROLE_CLAIM = "role";
+    private static final String ROLES_CLAIM = "roles";
+
     @Value("${jwt.secret}")
     private String secretKey;
 
     @Value("${jwt.expiration}")
     private long jwtExpiration;
 
+    private final UserRepository userRepository;
+
+    public JwtServiceImpl(UserRepository userRepository) {
+        this.userRepository = userRepository;
+    }
+
     @Override
     public String extractUsername(String token) {
         return extractClaim(token, Claims::getSubject);
-    }@Override
+    }
+
+    @Override
     public String extractRole(String token) {
-        return extractClaim(token, claims -> claims.get("role", String.class));
+        return extractClaim(token, claims -> claims.get(ROLE_CLAIM, String.class));
     }
 
     @Override
     public List<String> extractRoles(String token) {
         return extractClaim(token, claims -> {
-            Object rolesClaim = claims.get("roles");
-            if (rolesClaim instanceof List) {
-                return (List<String>) rolesClaim;
+            Object roles = claims.get(ROLES_CLAIM);
+            if (roles instanceof List) {
+                return (List<String>) roles;
             }
-            return Collections.emptyList();
+            return List.of();
         });
     }
+
     @Override
-    public boolean isTokenValid(String token, UserDetails userDetails) {
+    public boolean isTokenValid(String token) {
+        try {
+            Jwts.parserBuilder()
+                    .setSigningKey(getSignInKey())
+                    .build()
+                    .parseClaimsJws(token);
+            return !isTokenExpired(token);
+        } catch (JwtException | IllegalArgumentException e) {
+            logger.warn("Invalid JWT token: {}", e.getMessage());
+            return false;
+        }
+    }
+
+    @Override
+    public boolean isTokenValidForUser(String token, UserDetails userDetails) {
         final String username = extractUsername(token);
         return username.equals(userDetails.getUsername())
-                && !isTokenExpired(token)
-                && hasValidRole(token, userDetails);
-    }private boolean hasValidRole(String token, UserDetails userDetails) {
-        final String tokenRole = extractRole(token);
-        logger.debug("Token Role: {}", tokenRole);
-
-        if (userDetails instanceof User user) {
-            String userAuthority = user.getRole().getAuthority();
-            logger.debug("User Authority: {}", userAuthority);
-            return userAuthority.equals("ROLE_" + tokenRole);
-        }
-        return false;
+                && isTokenValid(token);
     }
 
     @Override
     public String generateToken(UserDetails userDetails) {
         Map<String, Object> claims = new HashMap<>();
-
-        if (userDetails instanceof User user) {
-            claims.put("role", user.getRole().name()); // Doit stocker "ADMIN" en majuscules
-            claims.put("roles", Collections.singletonList(user.getRole().name())); // If you store multiple roles, this is the place
-            return buildToken(claims, user.getEmail()); // Utilisez l'email comme sujet
-        }
-        return buildToken(new HashMap<>(), "");
+        addRolesToClaims(claims, userDetails);
+        return buildToken(claims, userDetails.getUsername());
     }
+
+    @Override
+    public User verifyToken(String token) {
+        String email = extractUsername(token);
+        logger.info("Verifying token for user: {}", email);
+        return userRepository.findByEmail(email)
+                .orElseThrow(() -> new UsernameNotFoundException("User not found: " + email));
+    }
+
+    private void addRolesToClaims(Map<String, Object> claims, UserDetails userDetails) {
+        List<String> authorities = userDetails.getAuthorities().stream()
+                .map(GrantedAuthority::getAuthority)
+                .collect(Collectors.toList());
+
+        claims.put(ROLES_CLAIM, authorities);
+
+        if (!authorities.isEmpty()) {
+            String primaryRole = authorities.get(0).replace("ROLE_", "");
+            claims.put(ROLE_CLAIM, primaryRole);
+        }
+    }
+
     private String buildToken(Map<String, Object> claims, String subject) {
         return Jwts.builder()
                 .setClaims(claims)
@@ -80,14 +121,6 @@ public class JwtServiceImpl implements JwtService {
                 .setExpiration(new Date(System.currentTimeMillis() + jwtExpiration))
                 .signWith(getSignInKey(), SignatureAlgorithm.HS256)
                 .compact();
-    }
-
-    private boolean isTokenExpired(String token) {
-        return extractExpiration(token).before(new Date());
-    }
-
-    private Date extractExpiration(String token) {
-        return extractClaim(token, Claims::getExpiration);
     }
 
     private <T> T extractClaim(String token, Function<Claims, T> claimsResolver) {
@@ -101,6 +134,14 @@ public class JwtServiceImpl implements JwtService {
                 .build()
                 .parseClaimsJws(token)
                 .getBody();
+    }
+
+    private boolean isTokenExpired(String token) {
+        return extractExpiration(token).before(new Date());
+    }
+
+    private Date extractExpiration(String token) {
+        return extractClaim(token, Claims::getExpiration);
     }
 
     private Key getSignInKey() {
